# jackman_kcm

./: .gitignore  .travis.yml  CMakeLists.txt  Messages.sh  README  README.md  kcm-jackman.desktop  kcm_jackman.actions
po/: de.po
src/: CMakeLists.txt  behaviorconfig.cpp  behaviorconfig.h  config.h.in  devicesconfig.cpp  devicesconfig.h  devicesmetadata.cpp  devicesmetadata.h  devicesmodel.cpp  devicesmodel.h  jackmankcm.cpp  jackmankcm.h  latencymeasurebox.cpp  latencymeasurebox.h
src/qml/: behavior.qml  main.qml
src/ui/: behaviorconfig.ui  devicesconfig.ui
